--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 8080
 MONGODB_CNN = mongodb+srv://ltapia1717:wIspMSBf5rV5UIWa@miclustercafe.n4zy6be.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Est03sMyPublic
