--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT = 8080
 MONGODB_CNN = mongodb+srv://ltapia1717:wIspMSBf5rV5UIWa@miclustercafe.n4zy6be.mongodb.net/cafeDB
 SECRETORPRIVATEKEY=Est03sMyPublic
+
+GOOGLE_CLIENT_ID=111929510776-1j3vr4dp3lt3cdl0k610dcfvkeo1mf8t.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
+
